src/objects/ProductFamily__c.object
<CustomObject>
    <description>Product Categories will be used to globally classify products (DS &amp; Competition) and simplify the way we can identify the procedures and workflows that are being used by our customers. 

TFUS-000005712</description>
    <fields>
        <fullName>ClassificationType__c</fullName>
        <label>Classification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PG1</fullName>
                </value>
                <value>
                    <fullName>PG2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBU__c</fullName>
        <label>GBU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GBU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPHCode__c</fullName>
        <description>Used to match the products to link to this category</description>
        <inlineHelpText>Global Product Hierarchy Code 
(PG1, PG2, PG3 or PG4 Product code)</inlineHelpText>
        <label>GPH Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LifespanMonths__c</fullName>
        <inlineHelpText>Max number of months a customer typically keeps this type of category of product.</inlineHelpText>
        <label>Lifespan (in Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Family</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GPHCode__c</columns>
        <columns>GBU__c</columns>
        <columns>ClassificationType__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Family Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Families</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>